--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "NODE_ENV=test ./node_modules/.bin/mocha src/test/*.test.js",
+    "test": "mocha src/test --timeout 4000 --exit",
     "start": "NODE_ENV=test nodemon src/app.js",
     "debug": "NODE_ENV=test nodemon --inspect=0.0.0.0 src/app.js"
   },
